# LocalNonogram

./: .gitignore  Cargo.toml  LocalNonogram.cabal  README.md  SolvableNonogram.cabal  makefile
app/: allGrids.hs  makeHints.hs  numSolvable.hs  solveHints.hs
lib/: ArrayGrid.hs  Nonogram.hs  SimpleGrid.hs  SolveClass.hs  SolveLocally.hs
src/: Nonogram.hs  SimpleGrid.hs  SolveTools.hs  cell.rs  cell_old.rs  grid.rs  grid_solver.rs  hint.rs  hint_line_iter.rs  hint_old.rs  hints.rs  line.rs  line_solver.rs  main.rs  makeHints.hs  solution.rs  solve.hs  solveHints.hs
