cabal-version: 3.0
name: LocalNonogram
version: 1.0.0
synopsis:
	The purpose of this project is to count nonograms aren't solvable with local solving logic.

homepage: https://github.com/olligobber/LocalNonogram
author: olligobber
maintainer: sirolligobbervii@yahoo.com.au
build-type: Simple

common options
	ghc-options:
		-Wall
		-Wno-tabs
		-O
	default-extensions:
		NamedFieldPuns
		ConstraintKinds
		RankNTypes
		TypeApplications
		ScopedTypeVariables

library
	import: options
	exposed-modules:
		Nonogram,
		SolveClass,
		SimpleGrid,
		ArrayGrid,
		SolveLocally,
	build-depends:
		base ^>= 4.17.2.0,
		array ^>= 0.5.8.0,
	hs-source-dirs: lib
	default-language: Haskell2010

executable numSolvable
	import: options
	main-is: numSolvable.hs
	build-depends:
		base ^>=4.17.2.0,
		LocalNonogram

	hs-source-dirs: app
	default-language: Haskell2010